--- a/index.css
+++ b/index.css
@@ -83,9 +83,6 @@ button{
   color: grey;
   font-weight: lighter;
   font-style: italic;
-  text-align: center;
-  position: absolute;
-  bottom: 10px;
 }
 
 .chat-line{
@@ -98,6 +95,12 @@ button{
   color: blue;
   margin-right: 10px;
   font-weight: bolder;
+}
+
+#chat-body .thought{
+  margin-left: auto;
+  width: 200px;
+  height: 0px;
 }
 
 .you{
