--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ button{
   background: #c4c4c4;
   border-radius: 2px;
   border: 5px solid #1f3f87;
-  box-shadow: 2px 2px 2px 3px rgba(0, 0, 0, .4);
+  box-shadow: 5px 5px 7px 1px rgb(0 0 0 / 40%);
 }
 
 #chat-header{
@@ -33,7 +33,6 @@ button{
   color: white;
   background-color: #1f3f87;
   font-size: 14px;
-  padding-left: 20px;
   text-align: center;
   vertical-align: middle;
   line-height: 26px;
@@ -57,13 +56,13 @@ button{
   position: relative;
   width: 500px;
   height: 472px;
-  margin-left: 30px;
-  border-left: 5px solid #a4a4a4;
-  border-top: 5px solid #a4a4a4;
-  border-right: 5px solid #e4e4e4;
-  border-bottom: 5px solid #e4e4e4;
+  margin: 10 auto;
+  border-left: 3px solid #848484;
+  border-top: 3px solid #848484;
+  border-right: 3px solid #d4d4d4;
+  border-bottom: 3px solid #d4d4d4;
 
-  margin-top: 10px;
+  
   overflow: auto;
 }
 
